# Transformers-Domain-Adaptation

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  GuideToTransformersDomainAdaptation.ipynb  LICENSE  Makefile  README.md  USAGE.md  domain_adaptation_pipeline.sh  hyperopt_ft.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_etl.txt  run_ner_bert.sh  run_pipeline.sh  setup.py  viz.py
.github/workflows/: python-package.yml
analyses/vocab_term_analysis/: VocabTermAnalysis.ipynb
auto_spot/: autonlp-permissions.json  get_public_dns.sh  mount_and_format_volume.sh  setup.sh  setup_iam.sh  spot_fleet_config.json  submit_spot_request.sh  user_data_script.sh
docs/: requirements.txt
docs/source/: conf.py  index.rst  refs.bib
docs/source/api/: data_selector.rst  vocab_augmentor.rst
docs/source/content/: domain_adaptation_components.rst  guide.rst  installation.rst  introduction.rst
learn-to-select-data/: diversity_fast.py  features.py  similarity.py  similarity_fast.py
notebooks/: GuideToTransformersDomainAdaptation.ipynb
scripts/: sync_s3_data.sh  sync_tb_logs.sh  train.sh
scripts/domain_adaptation/: augment_tokenizer.py  augment_vocab.py  domain_adaptation_utils.py  domain_pre_train.py  fine_tune_classification.py  fine_tune_mltc.py  fine_tune_ner.py  run_domain_pre_train.sh  run_fine_tune_ner.sh  select_data copy.py  select_data.py  tokenize_and_cache.py  utils_ner.py
scripts/tmux/: dpt.sh
src/: bert_multilabel_sequence_cls.py  metrics.py  tokenizer.py  viz.py
src/etl/: cat_text.py  shard.py
src/experimental/: random_data_selector.py
src/nlp_domain_adaptation/: vocab_augmentor.py
src/transformers_domain_adaptation/: __init__.py  type.py  vocab_augmentor.py
src/utils/: general_path.py  hash.py  iter.py  multiproc.py  shell.py  text.py  web.py
tests/domain_adaptation/: test_dpt_text_dataset.py  test_integrate_select_data.py  test_select_data.py  test_unit_select_data.py
tests/learn_to_select_data/: test_diversity_fast.py  test_similarity_fast.py
tests/unit_test/: pytest.ini
(+35 files in other folders)
